Letter Spacing and Colophon Fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,3 +64,7 @@ button:focus-visible, a:focus-visible {
     left: 50%;
     transform: translateX(-50%);
 }
+
+a {
+    letter-spacing: .015em;
+}
